@@ -9,6 +9,7 @@ endif
 API = rsvg-api.xml
 RAW_API = rsvg-api.raw
 INCLUDE_API = ../pango/pango-api.xml ../atk/atk-api.xml ../gdk/gdk-api.xml $(top_srcdir)/gdk/gdk-symbols.xml ../gtk/gtk-api.xml $(top_srcdir)/gtk/gtk-symbols.xml ../art/art-api.xml
+METADATA = Rsvg.metadata
 ASSEMBLY_NAME = rsvg-sharp
 references = /r:../glib/glib-sharp.dll /r:../pango/pango-sharp.dll /r:../atk/atk-sharp.dll /r:../gdk/gdk-sharp.dll /r:../gtk/gtk-sharp.dll /r:../art/art-sharp.dll
 
@@ -30,12 +31,14 @@ build_customs = $(addprefix $(srcdir)/, $(customs))
 
 EXTRA_DIST =			\
 	$(RAW_API)		\
+	$(METADATA)		\
 	$(customs)		\
 	$(sources)
 
-$(API): $(srcdir)/$(RAW_API)
+$(API): $(srcdir)/$(RAW_API) $(srcdir)/$(METADATA)
 	cp $(srcdir)/$(RAW_API) $(API)
 	chmod u+w $(API)
+	$(RUNTIME) ../parser/gapi-fixup.exe --api=$(API) --metadata=$(srcdir)/$(METADATA)
 
 generated-stamp: $(API) ../generator/gapi_codegen.exe $(build_customs)
 	$(RUNTIME) ../generator/gapi_codegen.exe --generate $(API) \
